# offloaded-snark

./: .gitignore  Cargo.toml  rustfmt.toml
src/: lib.rs
src/gadgets/: mod.rs
src/gadgets/offloaded/: mod.rs
src/snark/: mod.rs
