[package]
name = "offloaded-snark"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["snark", "sponge", "r1cs"] }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0" }
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false, features = ["derive"] }
ark-std = { version = "0.4.0" }
itertools = "0.13.0"
rand_core = { version = "0.6.4", default-features = false }
thiserror = "1.0.0"
